More design fixes. Nearly finalized.
Signed-off-by: Aniket Pant <me@aniketpant.com>

--- a/_layouts/entry.html
+++ b/_layouts/entry.html
@@ -9,6 +9,8 @@ layout: base
   	{{ content }}  
 	</article>
   <footer>
-    <p class="smallprint meta">Written on <date class="date">{{ page.date | date_to_long_string }}</date>
+    <div class="island meta">
+      <p>Written on <date class="date">{{ page.date | date_to_long_string }}</date>
+    </div>
   </footer>
 </div><!-- entry -->
