--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>{{ page.title }} &mdash; {{ site.name }}</title>
-  <meta name="author" content="{{ author.name }}">
+  <meta name="author" content="Aniket Pant">
   <meta name="description" content="{{ site.desc }}">
   <meta name="keywords" content="aniket, pant, rawrrr, journal">
   <meta name="viewport" content="width=device-width">
@@ -45,11 +45,11 @@
 
   <div class="main-container">
     <section class="grid wrapper">
-      <div class="grid__item two-thirds palm--one-whole">
+      <div class="grid__item two-thirds palm-one-whole">
       {{ content }}
       </div><!--
-      --><div class="grid__item one-third palm--one-whole">
-        <p>I’m Aniket. I love to code, listen to music and I even write free-verses at times. A majority of my work involves writing syntax for design.</p>
+      --><div class="grid__item one-third palm-one-whole">
+        <p>I’m <a href="http://aniketpant.com"><strong>Aniket</strong></a>. I love to code, listen to music and I even write free-verses at times. A majority of my work involves writing <em>syntax for design</em>.</p>
       </div>
     </section>
   </div> <!-- main-container -->
@@ -57,7 +57,7 @@
   <div class="footer-container">
     <div class="grid wrapper">
       <footer class="grid__item one-whole smallprint" role="contentinfo">
-        <p><span class="muted">Handcrafted by</span> <a href="http://twitter.com/{{ site.author.twitter }}">Aniket</a>.</p>
+        <p><span class="muted">Handcrafted by</span> <a href="http://twitter.com/aniket_pant">Aniket</a>.</p>
       </footer> <!-- footer -->
     </div>
   </div> <!-- footer-container -->
