--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>{{ page.title }} &mdash; {{ site.name }}</title>
   <meta name="author" content="Aniket Pant">
-  <meta name="description" content="{{ site.desc }}">
+  <meta name="description" content="{{ site.tagline }}">
   <meta name="keywords" content="aniket, pant, rawrrr, journal">
   <meta name="viewport" content="width=device-width">
 
@@ -37,7 +37,7 @@
     <header class="grid wrapper" role="banner">
       <div class="grid__item one-whole">
         <h1>
-          <a class="logo" href="/" rel="nofollow">Rawrrr</a>
+          <a class="logo" href="/" rel="nofollow">{{ site.title }} &ndash; {{ site.tagline }} </a>
         </h1>
       </div>
     </header> <!-- header -->
