[Layout] Changed header
Signed-off-by: Aniket Pant <me@aniketpant.com>

--- a/_layouts/entry.html
+++ b/_layouts/entry.html
@@ -7,10 +7,10 @@ layout: base
 	</header>
   <article role="main">
   	{{ content }}  
-	</article>
+  </article>
   <footer>
     <div class="island meta">
-      <p>Written on <date class="date">{{ page.date | date_to_long_string }}</date>
+      <p>Written on <date class="date">{{ page.date | date_to_long_string }}</date></p>
     </div>
   </footer>
 </div><!-- entry -->
