--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>{{ page.title }} &mdash; {{ site.name }}</title>
+  <title>{{ page.title }} &mdash; {{ site.title }}</title>
   <meta name="author" content="Aniket Pant">
   <meta name="description" content="{{ site.tagline }}">
   <meta name="keywords" content="aniket, pant, rawrrr, journal">
@@ -21,7 +21,7 @@
   (function() {
     var wf = document.createElement('script');
     wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-      '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+    '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
     wf.type = 'text/javascript';
     wf.async = 'true';
     var s = document.getElementsByTagName('script')[0];
@@ -31,35 +31,35 @@
 <body>
   <!--[if lt IE 7]>
     <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
-  <![endif]-->
+    <![endif]-->
 
-  <div class="header-container">
-    <header class="grid wrapper" role="banner">
-      <div class="grid__item one-whole">
-        <h1>
-          <a class="logo" href="/" rel="nofollow">{{ site.title }} &ndash; {{ site.tagline }} </a>
-        </h1>
-      </div>
-    </header> <!-- header -->
-  </div> <!-- header-container -->
+    <div class="header-container">
+      <header class="grid wrapper" role="banner">
+        <div class="grid__item one-whole">
+          <a class="logo" href="/" rel="nofollow">
+            <h1>{{ site.title }} <span class="delta">&lt;{{ site.tagline }}&gt;</span></h1>
+          </a>
+        </div>
+      </header> <!-- header -->
+    </div> <!-- header-container -->
 
-  <div class="main-container">
-    <section class="grid wrapper">
-      <div class="grid__item two-thirds palm-one-whole">
-      {{ content }}
+    <div class="main-container">
+      <section class="grid wrapper">
+        <div class="grid__item two-thirds palm-one-whole">
+          {{ content }}
       </div><!--
-      --><div class="grid__item one-third palm-one-whole">
-        <p>I’m <a href="http://aniketpant.com"><strong>Aniket</strong></a>. I love to code, listen to music and I even write free-verses at times. A majority of my work involves writing <em>syntax for design</em>.</p>
-      </div>
-    </section>
-  </div> <!-- main-container -->
+    --><div class="grid__item one-third palm-one-whole">
+    <p>I’m <a href="http://aniketpant.com"><strong>Aniket</strong></a>. I love to code, listen to music and I even write free-verses at times. A majority of my work involves writing <em>syntax for design</em>.</p>
+  </div>
+</section>
+</div> <!-- main-container -->
 
-  <div class="footer-container">
-    <div class="grid wrapper">
-      <footer class="grid__item one-whole smallprint" role="contentinfo">
-        <p><span class="muted">Handcrafted by</span> <a href="http://twitter.com/aniket_pant">Aniket</a>.</p>
-      </footer> <!-- footer -->
-    </div>
-  </div> <!-- footer-container -->
+<div class="footer-container">
+  <div class="grid wrapper">
+    <footer class="grid__item one-whole smallprint" role="contentinfo">
+      <p><span class="muted">Handcrafted by</span> <a href="http://twitter.com/aniket_pant">Aniket</a>.</p>
+    </footer> <!-- footer -->
+  </div>
+</div> <!-- footer-container -->
 </body>
 </html>
