--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>{{ page.title }} &mdash; {{ site.title }}</title>
+  <title>{% if page.title == "Home" %}{{ site.tagline }}{% else %}{{ page.title }}{% endif %} &ndash; {{ site.title }}</title>
   <meta name="author" content="Aniket Pant">
   <meta name="description" content="{{ site.tagline }}">
   <meta name="keywords" content="aniket, pant, rawrrr, journal">
@@ -37,7 +37,7 @@
       <header class="grid wrapper" role="banner">
         <div class="grid__item one-whole">
           <a class="logo" href="/" rel="nofollow">
-            <h1>{{ site.title }} <span class="delta">&lt;{{ site.tagline }}&gt;</span></h1>
+            <h1><span class="caps">{{ site.title }}</span> <span class="delta">&lt;{{ site.tagline }}&gt;</span></h1>
           </a>
         </div>
       </header> <!-- header -->
