--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -6,7 +6,8 @@ body {
   color: $gray;
   font-family: $content;
   font-weight: 300;
-  padding-left: 2rem;
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
   border-left: 6px solid $blue;
 }
 
