--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>{% if page.slug == "home" %}{{ site.tagline }}{% else %}{{ page.title }}&ndash; {{ site.tagline }} &ndash; {{ site.title }}{% endif %}</title>
+  <title>{% if page.slug == "home" %}{{ site.tagline }}{% else %}{{ page.title }} &ndash; {{ site.title }}{% endif %}</title>
   <meta name="author" content="Aniket Pant">
   <meta name="description" content="{{ site.tagline }}">
   <meta name="keywords" content="aniket, pant, rawrrr, journal">
@@ -23,7 +23,7 @@
       <header class="grid wrapper" role="banner">
         <div class="grid__item one-whole">
           <a class="brand" href="/" rel="nofollow">
-            <h1><span class="caps">{{ site.title }}</span><br/><span class="delta">{{ site.tagline }}</span></h2>
+            <h1 class="beta">{{ site.title }}</h1>
           </a>
         </div>
       </header> <!-- header -->
