--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,12 +2,13 @@
 layout: base
 ---
 <div class="entry">
+  <header>
+    <h1>{{ page.title }}</h1>
+  </header>
   <article role="main">
   	{{ content }}
   </article>
   <footer>
-    <div class="island meta">
-      <p>Written on <date class="date">{{ page.date | date_to_long_string }}</date></p>
-    </div>
+    <p class="muted">Written on <date class="date">{{ page.date | date_to_long_string }}</date></p>
   </footer>
 </div><!-- entry -->
