--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>{% if page.slug == "home" %}{{ site.tagline }}{% else %}{{ page.title }} &ndash; {{ site.title }}{% endif %}</title>
+  <title>{% if page.slug == "home" %}{{ site.title }}{% else %}{{ page.title }} &ndash; {{ site.title }}{% endif %}</title>
   <meta name="author" content="Aniket Pant">
   <meta name="description" content="{{ site.tagline }}">
   <meta name="keywords" content="aniket, pant, rawrrr, journal">
