Change homepage design
Signed-off-by: Aniket Pant <me@aniketpant.com>

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -22,9 +22,7 @@
     <div class="header-container">
       <header class="grid wrapper" role="banner">
         <div class="grid__item one-whole">
-          <a class="brand" href="/" rel="nofollow">
-            <h1 class="beta">{{ site.title }}</h1>
-          </a>
+          <a class="logo" href="/" rel="nofollow"><img src="/images/logo.png" alt="{{site.title}}" /></a>
         </div>
       </header> <!-- header -->
     </div> <!-- header-container -->
