--- a/stylesheets/_vars.scss
+++ b/stylesheets/_vars.scss
@@ -2,7 +2,7 @@
 $content:           "Ubuntu Light", Helvetica, Arial, sans-serif;
 
 // Colors
-$blue:              #037F8C;
+$blue:              #435BA6;
 $red:               #BF2C47;
 
 $white:             #FAFAFA;
