Fix breaking design
Signed-off-by: Aniket Pant <me@aniketpant.com>

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -39,7 +39,7 @@ a {
 }
 
 .list {
-  a {
+  .link {
     padding-left: 1rem;
     margin-bottom: 1rem;
     border-left: 3px solid darken($white, 20%);
