--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -47,12 +47,12 @@
 
     <script type="text/javascript">
     WebFontConfig = {
-      google: { families: [ 'Ubuntu:300,400,300italic:latin' ] }
+      google: { families: [ 'Roboto:500,300,300italic:latin' ] }
     };
     (function() {
       var wf = document.createElement('script');
       wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-      '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+        '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
       wf.type = 'text/javascript';
       wf.async = 'true';
       var s = document.getElementsByTagName('script')[0];
