--- a/stylesheets/_vars.scss
+++ b/stylesheets/_vars.scss
@@ -1,5 +1,5 @@
 // Fonts
-$content:           "Ubuntu Light", Helvetica, Arial, sans-serif;
+$content:           'Roboto', Helvetica, Arial, sans-serif;
 
 // Colors
 $blue:              #435BA6;
