Home page improved
Signed-off-by: Aniket Pant <me@aniketpant.com>

--- a/stylesheets/_vars.scss
+++ b/stylesheets/_vars.scss
@@ -19,6 +19,5 @@ $brand-color:       $color-alt;
 $brand-face:        $content;
 
 // Overrides
+$use-block-list:    true;
 $use-grids:         true;
-$use-island:        true;
-$use-nav:           true;
