Remove wasteful code
Signed-off-by: Aniket Pant <me@aniketpant.com>

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -72,11 +72,7 @@ article[role="main"] {
   line-height: 1.6;
 }
 
-.meta {
-  background: #f9fea2;
-}
-
 ::selection {
-  background: $color-base;
+  background: $color-alt;
   color: $white;
 }
