Change display of date
Signed-off-by: Aniket Pant <me@aniketpant.com>

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,6 @@ layout: base
   	{{ content }}
   </article>
   <footer>
-    <p class="muted">Written on <date class="date">{{ page.date | date_to_long_string }}</date></p>
+    <p class="smallprint muted"><date class="date">{{ page.date | date_to_long_string }}</date></p>
   </footer>
 </div><!-- entry -->
