Home page tweaks
Signed-off-by: Aniket Pant <me@aniketpant.com>

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -23,11 +23,11 @@
       <header class="grid__item one-third palm-one-whole" role="banner">
         <a class="logo" href="/" rel="nofollow"><img src="/images/logo.png" alt="{{site.title}}" /></a>
       </header><!--
-      --><section role="main" class="grid__item two-thirds palm-one-whole">
-        <p class="lead">I'm a <strong>developer</strong> who <a href="http://aniketpant.com/archive">writes</a>,<br/><a href="http://aniketpant.com/speaking">talks</a> and <a href="http://twitter.com/aniket_pant">tweets</a>.</p>
+      --><section role="main" class="grid__item two-thirds palm-one-whole push-half--top">
+        <p class="lead">I'm a <strong>developer</strong> who <a href="http://aniketpant.com/archive">writes</a>, <a href="http://aniketpant.com/speaking">talks</a> and <a href="http://twitter.com/aniket_pant">tweets</a>.</p>
       {{ content }}
       </section><!--
-    --><footer class="grid__item one-whole smallprint" role="contentinfo">
+    --><footer class="grid__item push--one-third two-thirds palm-one-whole smallprint" role="contentinfo">
         <p><span class="muted">Handcrafted by</span> <a href="http://twitter.com/aniket_pant">Aniket</a>.</p>
       </footer> <!-- footer -->
     </div>
