Initial responsive design set
Signed-off-by: Aniket Pant <me@aniketpant.com>

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -27,7 +27,7 @@
         <p class="lead">I'm a <strong>developer</strong> who <a href="http://aniketpant.com/archive">writes</a>, <a href="http://aniketpant.com/speaking">talks</a> and <a href="http://twitter.com/aniket_pant">tweets</a>.</p>
       {{ content }}
       </section><!--
-    --><footer class="grid__item push--one-third two-thirds palm-one-whole smallprint" role="contentinfo">
+    --><footer class="grid__item push--desk-one-third two-thirds palm-one-whole smallprint" role="contentinfo">
         <p><span class="muted">Handcrafted by</span> <a href="http://twitter.com/aniket_pant">Aniket</a>.</p>
       </footer> <!-- footer -->
     </div>
