Change layout for portable devices
Signed-off-by: Aniket Pant <me@aniketpant.com>

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -20,14 +20,14 @@
     <![endif]-->
 
     <div class="grid wrapper push--top">
-      <header class="grid__item one-third palm-one-whole" role="banner">
+      <header class="grid__item one-third portable-one-whole" role="banner">
         <a class="logo" href="/" rel="nofollow"><img src="/images/logo.png" alt="{{site.title}}" /></a>
       </header><!--
-      --><section role="main" class="grid__item two-thirds palm-one-whole push-half--top">
+      --><section role="main" class="grid__item two-thirds portable-one-whole push-half--top">
         <p class="lead">I'm a <strong>developer</strong> who <a href="http://aniketpant.com/archive">writes</a>, <a href="http://aniketpant.com/speaking">talks</a> and <a href="http://twitter.com/aniket_pant">tweets</a>.</p>
       {{ content }}
       </section><!--
-    --><footer class="grid__item push--desk-one-third two-thirds palm-one-whole smallprint" role="contentinfo">
+    --><footer class="grid__item push--desk-one-third two-thirds portable-one-whole smallprint" role="contentinfo">
         <p><span class="muted">Handcrafted by</span> <a href="http://twitter.com/aniket_pant">Aniket</a>.</p>
       </footer> <!-- footer -->
     </div>
